dev/payment-paypal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-paypal
  namespace: yas-dev
  labels:
    app: payment-paypal
spec:
  type: ClusterIP
  selector:
    app: payment-paypal
  ports:
  - port: 80
    targetPort: 80
