dev/payment-paypal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-paypal
  namespace: yas-dev
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: api.yas.local.com
    http:
      paths:
      - path: /payment-paypal
        pathType: ImplementationSpecific
        backend:
          service:
            name: payment-paypal
            port:
              number: 80
